fixed findbugs issues
git-svn-id: svn://127.0.0.1/mytunesrss/trunk@8458 6cd82e91-2702-0410-863d-86aa3370aca5